--- a/Rayleigh Scattering.ipynb
+++ b/Rayleigh Scattering.ipynb
@@ -10,6 +10,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Abstract:\n",
+    "\n",
+    "We start our simulation by modeling an electric dipole with a spring potential. The dipole is separated by a given equilibrium distance. The dipole is then driven by an external sinusoidal electric field, which can be thought of as light with a certain frequency hitting a molecule, and causing oscillations in the electric dipole. The first part of our simulation is to plot the trajectory of these oscillations for various frequencies, and determine which resonant frequency of the driven electric field causes the largest oscillations in the electric dipole. We also show that driving the dipole with a force that is the superposition of two sinusoidal forces results in the same trajectory as that of the addition of the trajectories due to both of those forces separately. For the second part of the simulation, we will calculate the resonant frequency theoretically and use this value to simulate how changes in the electric field propagate away from the dipole at the speed of light. We will use the fact that the speed of light is the fastest speed of information to determine how the electric field should act a certain distance away from the dipole. This simulation will show us how the oscillating charged particles cause electromagnetic waves to propagate away from the dipole, at frequencies determined by the driving force. Ultimately, we will use this fact to show that molecules will scatter light at different frequencies better than others due to their intrinsic characteristics, which explains why different molecules have different emission spectrums of light.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -272,6 +281,8 @@
     "def calc_electric_field(dipole, point):\n",
     "    ''' function to calculate electric field for a point from initial position of the dipole'''\n",
     "    \n",
+    "    #OpenCourseWare\n",
+    "    \n",
     "    dif1 = point - dipole.initial_position_1\n",
     "    dif2 = point - dipole.initial_position_2\n",
     "    \n",
@@ -414,7 +425,8 @@
     "        '''function to populate electric field array at a certain point in time'''\n",
     "        r1 = self.xyz - pos1 # distance from particle 1\n",
     "        r2 = self.xyz - pos2 # distance from particle 2\n",
-    "\n",
+    "        \n",
+    "        #Lewin \n",
     "        time1 = time + np.linalg.norm(r1) / c # time when particle 1 information will actually reach point in space\n",
     "        time2 = time + np.linalg.norm(r2) / c # time when particle 2 information will actually reach point in space\n",
     "\n",
@@ -454,6 +466,8 @@
     "            \n",
     "    def calculate_electric_field(self, dipole):\n",
     "        '''function to completely calculate electric field evolution over time'''\n",
+    "        \n",
+    "        #OpenCourseWare\n",
     "        self.iteration_flag = False\n",
     "        self.reset_electric_field()\n",
     "        pos1 = dipole.pos1\n",
@@ -2360,6 +2374,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Physics\n",
     "# superposition\n",
     "omega_1 = np.sqrt(3)\n",
     "omega_2 = 2\n",
@@ -3993,6 +4008,7 @@
    "source": [
     "# calculate forces for the two sinusoidal forces earlier but separate this time\n",
     "# additionally, create two different dipoles \n",
+    "#Physics\n",
     "\n",
     "superPos_1 = sinusoidal_force(E0_a, omega_1, timesteps)\n",
     "dipole_one = Dipole(timesteps = timesteps, distance =1,k = 1, external_force_arr=superPos_1)\n",
@@ -4850,6 +4866,19 @@
     "\n",
     "plt.show()\n",
     "#comfirms superposition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Citations:\n",
+    "\n",
+    "Lewin, Walter, director. 8.03 - Lect 14 - Accelerated Charges, Poynting Vector, Power, Rayleigh Scattering. 8.03 - Lect 14 - Accelerated Charges, Poynting Vector, Power, Rayleigh Scattering, 11 Feb. 2015, www.youtube.com/watch?v=QpGBs307qYs.\n",
+    "\n",
+    "OpenCourseWare, MIT, director. Accelerated Charges Radiating Electromagnetic Waves. Accelerated Charges Radiating Electromagnetic Waves, 24 Oct. 2013, www.youtube.com/watch?v=wF8vLZ9ceb0&amp;t=1195s.\n",
+    "\n",
+    "Physics, Real, director. 9.1.2 Electric Dipole Radiation. 9.1.2 Electric Dipole Radiation, 28 June 2015, www.youtube.com/watch?v=MGCHznSfCnQ&amp;t=593s."
    ]
   }
  ],
