--- a/Rayleigh Scattering.ipynb
+++ b/Rayleigh Scattering.ipynb
@@ -19,6 +19,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Motivation:\n",
+    "   \n",
+    "We were interested in modeling how a dipole reacts to an external Electric Field. We wanted to measure the trajectory of the dipole and the field at each point along with observing a possible time delay (which we simulate by a smaller speed of light). We found all of that interesting and relevant because the way these dipoles work is very similar to how molecules in the atmosphere interact with the Sun’s rays. By having this model, we can create a better simulation of atmospheric interaction with the Sun.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -111,6 +121,8 @@
     "        \n",
     "    def update(self, external_force):\n",
     "        r = self.particle2.pos - self.particle1.pos\n",
+    "        \n",
+    "        #Driven Oscillation models the movement of the dipole\n",
     "        \n",
     "        spring_force = self.k * (np.linalg.norm(r) - self.distance) * (r / np.linalg.norm(r))\n",
     "        force = spring_force + external_force * self.charge\n",
