blue da ba dee da ba die
"no just push it"
- Samuel Korman

--- a/Rayleigh Scattering.ipynb
+++ b/Rayleigh Scattering.ipynb
@@ -168,6 +168,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we drive the dipole that we set up with a time varying external force. this system is modelled by the following differential equation.\n",
+    "$$ mx'' + kx = Fsin(\\omega t)$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -245,6 +253,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we evaluate the behaviour of dipole-spring systems under driving forces of different driving frequency and plot the response amplitudes. we notice that the response amplitude peaks at around 1.41 (i.e sqrt(2) ) which is the resonance frequency for this system."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -282,6 +297,13 @@
     "\n",
     "ax1.plot(omega_arr,oscillation_amplitudes)\n",
     "ax1.grid()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we start investigating the behaviour of the electric field of the dipole as it oscillates."
    ]
   },
   {
@@ -357,6 +379,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "when the dipole changes it's position, the information that it's position has changed propogates at the speed of light. if the dipole starts moving at t = 0. A point t light seconds away will have the same electric field as when the dipole was stationary until the information reaches it. the information would take time r/c to reach it where r is the seperation between the point and dipole. thus we can set up a new time for each point since as far as that point is concerned the dipole is stil in its former state. formally we write. \n",
+    "$$t' = t - r/c$$ where t' is the time of the dipole"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -407,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,6 +538,13 @@
     "        for i in range(self.relax_iterations): # fill in gaps between calculated points for both arrays\n",
     "            self.electric_field_1 = relax(self.electric_field_1, relax_mask_1)\n",
     "            self.electric_field_2 = relax(self.electric_field_2, relax_mask_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "we implement this in code through the class point_in_space. this class is set up such that each point_in_space has an electric field array assosciated with it which stores the values of the electric field vector at each different point in time. each position of the dipole correlates to certain electric field values at a given point. the change in the electric field values of point_in_charge's electric field array "
    ]
   },
   {
